<resources>
    <string name="app_name">RapiCompra</string>
    <string name="txtBienvenida">¡Bienvenido a tu portal RAPICOMPRA, Inicia sesión o registrate para continuar!</string>
    <string name="btnIni">Login</string>
    <string name="btnRegistro">Registrate</string>
    <string name="txtUsu">Usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellido">Apellido</string>
    <string name="txtCorreo">Email</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="txtRepcont">Repetir Contraseña</string>
    <string name="txtUsuario">Bienvenido</string>
    <string name="txtPaso1">Paso 1</string>
    <string name="txtPaso2">Paso 2</string>
    <string name="txtPaso3">Paso 3</string>
    <string name="btnPro">Selecciona tus Productos</string>
    <string name="btnCar">Productos en el Carrito</string>
    <string name="btnUbi">Agregar tu Ubicación</string>
    <string name="txtListar">Escoja su Producto...</string>
    <string name="txtPro1">Artículos Tecnológicos</string>
    <string name="txtPro2">Moda</string>
    <string name="txtPro3">Artículos Varios</string>
    <string name="ckBoxP">ASUS 509 Core I5 500Gb</string>
    <string name="txtPreP">894</string>
    <string name="chkCell">Samsung Z Flip 256Gb</string>
    <string name="txtPreCell">1733</string>
    <string name="chkTe">Xtech Armiger Keyboard</string>
    <string name="txtPreTe">18</string>
    <string name="btnAgregar">Agregar al Carrito</string>
    <string name="chkBoxModa1">Conjunto de pantalones y top corto </string>
    <string name="txtPreModa1">30</string>
    <string name="chkBoxModa2">Terno Chados</string>
    <string name="txtPreModa2">99</string>
    <string name="chkModa3">Camisa popelin vichy rojo</string>
    <string name="txtPreModa3">37</string>
    <string name="txtTalla">Tallas:</string>
    <string name="cbT1">S</string>
    <string name="cbT2">M</string>
    <string name="cbT3">L</string>
    <string name="btnAgregarModa">Agregar al Carrito</string>
    <string name="btnRegresar">Atras</string>
    <string name="chkVarios1">Mascarillas N95</string>
    <string name="txtPreV1">13.95</string>
    <string name="chkVarios2">Ollas Inducción 6 PZ Warenhaus Satín</string>
    <string name="txtPreV2">59.90</string>
    <string name="chkVarios3">Mochila ERAY</string>
    <string name="txtPreV3">45</string>
    <string name="txtPed">¡Tu Pedido!</string>
    <string name="txtSub">Subtotal</string>
    <string name="txtIva">IVA 12%</string>
    <string name="txtEnvio">Valor de Envío</string>
    <string name="txtTot">Total</string>
    <string name="txtDetalle">Detalle</string>
    <string name="txtCantidad">Cantidad</string>
    <string name="txtPrecio">Precio Unitario</string>
    <string name="txtName">Contacto</string>
    <string name="txtTel">Telefono</string>
    <string name="btnUbicar">Confirmar</string>
    <string name="title_activity_ubicacion_rapi">Map</string>

</resources>
